# bernard

./: .gitignore  Cargo.toml  TODO.md  proto.rs
brainz_macros/: Cargo.toml
brainz_macros/src/: lib.rs
entity_macro/: Cargo.toml
entity_macro/src/: lib.rs
proxy/: Pipfile  proxy.py
src/: browse.rs  enums.rs  error.rs  lib.rs  lookup.rs  search.rs  text_representation.rs  traits.rs  utils.rs
src/calls/: browse.rs  lookup.rs  mod.rs  search.rs
src/entities/: alias.rs  area.rs  artist.rs  collection.rs  cover_art_archive.rs  disc.rs  event.rs  instrument.rs  label.rs  media.rs  place.rs  recording.rs  relation.rs  release.rs  release_group.rs  series.rs  tag.rs  track.rs  work.rs
src/entity/: alias.rs  area.rs  artist.rs  collection.rs  cover_art_archive.rs  disc.rs  event.rs  instrument.rs  label.rs  lib.rs  life_span.rs  media.rs  mod.rs  place.rs  recording.rs  relation.rs  release.rs  release_group.rs  series.rs  tag.rs  tags.rs  track.rs  work.rs
tests/: alias.rs  area.rs  artist.rs  collection.rs  cover_art_archive.rs  deserialize.rs  disc.rs  event.rs  instrument.rs  label.rs  lib.rs  life_span.rs  media.rs  place.rs  recording.rs  relation.rs  release.rs  release_group.rs  series.rs  tag.rs  test_samples.rs  track.rs  works.rs
