[package]
name = "bernard"
version = "0.1.0"
authors = ["Alexis SULTAN <alex@brindille.org>"]

[dependencies]
hyper = "0.12"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
futures = "0.1"
tokio-core = "0.1"
entity_macro = { path = "entity_macro" }
percent-encoding = "1.0"
regex = "0.2"

[dependencies.uuid]
version="0.5"
features=["serde"]
